kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trivy-web
  labels:
    name: trivy-web
