kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivy-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivy-web
  template:
    metadata:
      labels:
        app: trivy-web
    spec:
      containers:
        - name: trivy-web
          image: athallerde/trivy-web:2023-09-10-2
          args:
            - "--binding=0.0.0.0:16223"
          ports:
            - containerPort: 16223
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1000m"
              memory: 512Mi
          volumeMounts:
            - name: trivy-storage
              mountPath: /.cache
      volumes:
        - name: trivy-storage
          emptyDir: {}
